--- a/backend/user-service/.env
+++ b/backend/user-service/.env
@@ -3,12 +3,12 @@ MONGO_URI=mongodb://localhost:27017/user-db
 JWT_SECRET=xxxx
 CLIENT_URL=http://localhost:5173
 
-; To Be added to github secrets
-GITHUB_CLIENT_ID=Ov23li8PPtcOLA4w0sis
-GITHUB_CLIENT_SECRET=e671587747f604e9782b197e6bb067533db9d234
-GITHUB_CALLBACK_URL=http://localhost:5001/auth/github/callback
 
-; To Be added to github secrets
-GOOGLE_CLIENT_ID=307626813879-okfk3jlk3b3ivq9gcih2qe1je8enr5l4.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
+API_GITHUB_CLIENT_ID=xxxx
+API_GITHUB_CLIENT_SECRET=xxxx
+API_GITHUB_CALLBACK_URL=http://localhost:5001/auth/github/callback
+
+
+GOOGLE_CLIENT_ID=xxxx
+GOOGLE_CLIENT_SECRET=xxxx
 GOOGLE_CALLBACK_URL=http://localhost:5001/auth/google/callback
