--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./backend/user-service
-          file: Dockerfile
+          file: ./backend/user-service/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ${{ secrets.DOCKER_USERNAME }}/forkina-user-service:latest
@@ -34,7 +34,7 @@ jobs:
       - name: Build and push milestone Image
         uses: docker/build-push-action@v5
         with:
-          context: ./milestone-service
+          context: ./backend/milestone-service
           file: ./backend/milestone-service/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
@@ -43,7 +43,7 @@ jobs:
       - name: Build and push notification Image
         uses: docker/build-push-action@v5
         with:
-          context: ./notification-service
+          context: ./backend/notification-service
           file: ./backend/notification-service/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
@@ -52,7 +52,7 @@ jobs:
       - name: Build and push project Image
         uses: docker/build-push-action@v5
         with:
-          context: ./project-service
+          context: ./backend/project-service
           file: ./backend/project-service/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
@@ -61,7 +61,7 @@ jobs:
       - name: Build and push task Image
         uses: docker/build-push-action@v5
         with:
-          context: ./task-service
+          context: ./backend/task-service
           file: ./backend/task-service/Dockerfile
           push: true
           platforms: linux/amd64,linux/arm64
